# rules_python_lock_bug

./: .bazelrc  BUILD.bazel  MODULE.bazel  main.py  main_cffi.py  requirements_lock.txt
