module(name = "lock_bug_repro", version = "0.1")

bazel_dep(name = "rules_python", version = "2.0.0")

python_ext = use_extension("@rules_python//python/extensions:python.bzl", "python")
python_ext.toolchain(python_version = "3.11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")
