module(name = "lock_bug_repro", version = "0.1")

bazel_dep(name = "rules_python", version = "2.0.0")

git_override(
    module_name = "rules_python",
    remote = "https://github.com/aignas/rules_python.git",
    commit = "9f8154d8b4e6370fcd2f9d66c0d716470011c407",
)
bazel_dep(name = "ofiuco", version = "0.8.3")

python_ext = use_extension("@rules_python//python/extensions:python.bzl", "python")
python_ext.toolchain(python_version = "3.11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")

parse = use_extension("@ofiuco//python:extensions.bzl", "parse")
parse.lock(
    name = "poetry_deps",
    lock = "//:poetry.lock",
)
use_repo(parse, "poetry_deps")
